# ultragroth

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_gmp.sh  prove_verify.sh  prover_inputs.txt
scripts/: build_android_system.sh  build_ios_systems.sh  create_xcframework.sh
src/: CMakeLists.txt  README.md  binfile_utils.cpp  binfile_utils.hpp  fileloader.hpp  fullprover.hpp  groth16.cpp  groth16.hpp  keccak256.cpp  keccak256.h  main_prover.cpp  main_prover_ultra_groth.cpp  main_ultra_groth.cpp  main_verifier.cpp  main_verifier_ultra_groth.cpp  prover.cpp  prover.h  prover_ultra_groth.cpp  prover_ultra_groth.h  prover_ultra_groth.hpp  proverapi.cpp  rounds_extern.h  ultra_groth.cpp  ultra_groth.hpp  ultra_groth_prover.cpp  ultra_groth_prover.h  verifier.cpp  verifier.h  verifier_ultra_groth.cpp  verifier_ultra_groth.h  verifier_ultra_groth.hpp  wtns_utils.hpp  zkey_utils.cpp  zkey_utils.hpp
